--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,14 @@ uuid = "8910f421-7bf2-4b64-9cf8-3e7fe6cfee70"
 authors = ["Shunsuke Nishimura"]
 version = "1.0.0-DEV"
 
+[deps]
+HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+SmoothingSplines = "102930c3-cf33-599f-b3b1-9a29a5acab30"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
 julia = "1.6.7"
 
