--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "VectorPSFs"
 uuid = "8910f421-7bf2-4b64-9cf8-3e7fe6cfee70"
 authors = ["Shunsuke Nishimura"]
-version = "1.0.0-DEV"
+version = "1.0.1"
 
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
