--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,14 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-julia = "1.10."
+Documenter = "1.8"
+HCubature = "1.7"
+Optim = "1.10"
+PSFModels = "0.8"
+SmoothingSplines = "0.3"
+StaticArrays = "1.9"
+Statistics = "1.10"
+julia = "1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
